testdata/fixtures/audit/positive/shell_interp_execsync_js.js
const child_process = require("child_process");

function removeTarget(target) {
  return child_process.execSync(`rm -rf ${target}`);
}
