testdata/fixtures/audit/negative/cookie_insecure_neg_unrelated_call_js.js
function fetchCookieRecipe(db) {
  return db.query("SELECT * FROM cookie_recipes");
}

module.exports = fetchCookieRecipe;
